# pepper-plucker

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
configuration/: base.yaml
scripts/: .gitignore  current_state.sh  ddl.sql
src/: configuration.rs  main.rs  startup.rs
src/domain/: color.rs  dispose_plant.rs  fruit.rs  harvest.rs  harvest_fruit.rs  mod.rs  new_color.rs  new_fruit.rs  new_harvest.rs  new_plant.rs  plant.rs
src/routes/: mod.rs
src/routes/common/: mod.rs  rollback.rs
src/routes/fruits/: get.rs  post.rs
src/routes/harvests/: post.rs
src/routes/plants/: delete.rs  mod.rs  post.rs  print_missing.rs
templates/: print_plant.html  print_plants.html
